# octree-renderer

./: CMakeLists.txt  compile_commands.json  imgui.ini
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.cpp
window/: CMakeLists.txt
window/include/: win.hpp
window/src/: win.cpp
